--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,10 @@
 VITE_API_URL=https://gdg-techsprint-hackathon-project.onrender.com
+
+# Firebase Env
+
+VITE_FIREBASE_API_KEY=AIzaSyCThG2ft8UwWM-6k_V0YbvIx5zdwPSVFFI
+VITE_FIREBASE_AUTH_DOMAIN=plastiwatch-gdg-techsprint.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=plastiwatch-gdg-techsprint
+VITE_FIREBASE_STORAGE_BUCKET=plastiwatch-gdg-techsprint.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=905061132198
+VITE_FIREBASE_APP_ID=1:905061132198:web:6d5375e369ff1f7cc91167
