--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node" : "18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,7 +19,9 @@
     "onnxruntime-web": "^1.23.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -28,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.2.4",
-    "vite-plugin-static-copy": "^3.1.4"
+    "vite-plugin-static-copy": "^3.1.4",
+    "firebase-functions-test": "^3.1.0"
   }
 }
