--- a/frontend/.env
+++ b/frontend/.env
@@ -8,4 +8,4 @@ VITE_FIREBASE_PROJECT_ID=plastiwatch-gdg-techsprint
 VITE_FIREBASE_STORAGE_BUCKET=plastiwatch-gdg-techsprint.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=905061132198
 VITE_FIREBASE_APP_ID=1:905061132198:web:6d5375e369ff1f7cc91167
-VITE_FUNCTIONS_URL=https://us-central1-plastiwatch-abc.cloudfunctions.net
+# VITE_FUNCTIONS_URL=https://us-central1-plastiwatch-abc.cloudfunctions.net
