--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node" : "18"
+    "node": "18"
   },
   "scripts": {
     "dev": "vite",
@@ -15,13 +15,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "firebase": "^12.7.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.5.0",
     "lucide-react": "^0.562.0",
     "onnxruntime-web": "^1.23.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18",
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.5.0"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -31,9 +31,9 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "firebase-functions-test": "^3.1.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4",
-    "vite-plugin-static-copy": "^3.1.4",
-    "firebase-functions-test": "^3.1.0"
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
