Add ONNX FastAPI backend + Dockerfile

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-ultralytics
-fastapi
-uvicorn[standard]
+ultralytic
 python-multipart
 opencv-python-headless
-numpy
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+onnxruntime==1.15.0
+numpy==1.26.0
+pillow==10.0.0
