minor changes in req.txt 3

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 ultralytics
 python-multipart
 opencv-python-headless
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
+fastapi
+uvicorn[standard]
 onnxruntime
-pillow==10.0.0
-numpy==1.26.0
+pillow
+numpy
