--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "chart.js": "^4.5.1",
     "firebase": "^12.7.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
     "lucide-react": "^0.562.0",
     "onnxruntime-web": "^1.23.2",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
   },
